--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,7 +156,7 @@ jobs:
                       --template-file .circleci/files/backend.yml \
                       --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
                       --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"  \
-                      --tags project=udapeople
+                      --tags project=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
       - run:
           name: Ensure frontend infrastructure exists 
           command: |
@@ -168,13 +168,12 @@ jobs:
 
       - run:
           name: Add backend ip to ansible inventory
-          working_directory: ./.circleci/ansible
           command: |
               aws ec2 describe-instances \
                     --query 'Reservations[*].Instances[*].PublicIpAddress' \
-                    --filters "Name=tag:Project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
-                    --output text >> inventory.txt
-              cat inventory.txt
+                    --filters "Name=tag:project,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+                    --output text >> ~/project/.circleci/ansible/inventory.txt
+              cat ~/project/.circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
