--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -13,8 +13,8 @@
   pre_tasks:
     - name: "wait 600 seconds for taret connection to become reachable/usable"
       wait_for_connection:
-        timeout: 600
-        delay: 1
+        timeout: 1200
+        delay: 2
     - name: "install python for ansible"
       apt: 
         name: python3
@@ -32,4 +32,4 @@
     - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
     - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
   roles:
-    - configure-server
+    # - configure-server
