--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,46 +141,46 @@ jobs:
   #             npm fund
   #             npm audit fix --force
 
-  deploy-infrastructure:
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run:
-          name: Install dependencies
-          command: yum install -y tar gzip
-      - run:
-          name: ensure backend infrastructure exists
-          command: |
-              aws cloudformation deploy \
-                --template-file .circleci/files/backend.yml \
-                --tags Project=udapeople \
-                --stack-name stack-create-server-${CIRCLE_WORKFLOW_ID:0:7} \
-                --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
-      - run:
-          name: Ensure frontend infrastructure exists 
-          command: |
-              aws cloudformation deploy \
-                --template-file .circleci/files/frontend.yml \
-                --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
-                --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
-                --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+  # deploy-infrastructure:
+  #   docker:
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Install dependencies
+  #         command: yum install -y tar gzip
+  #     - run:
+  #         name: ensure backend infrastructure exists
+  #         command: |
+  #             aws cloudformation deploy \
+  #               --template-file .circleci/files/backend.yml \
+  #               --tags Project=udapeople \
+  #               --stack-name stack-create-server-${CIRCLE_WORKFLOW_ID:0:7} \
+  #               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
+  #     - run:
+  #         name: Ensure frontend infrastructure exists 
+  #         command: |
+  #             aws cloudformation deploy \
+  #               --template-file .circleci/files/frontend.yml \
+  #               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}" \
+  #               --tags project=udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
 
-      - run:
-          name: Add backend ip to ansible inventory
-          command: |
-            aws ec2 describe-instances \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
-              --output text >> .circleci/ansible/inventory.txt
+  #     - run:
+  #         name: Add backend ip to ansible inventory
+  #         command: |
+  #           aws ec2 describe-instances \
+  #             --query 'Reservations[*].Instances[*].PublicIpAddress' \
+  #             --filters Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
+  #             --output text >> .circleci/ansible/inventory.txt
             
-            cat ~/project/.circleci/ansible/inventory.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/.circleci/ansible/inventory.txt
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  #           cat ~/project/.circleci/ansible/inventory.txt
+  #     - persist_to_workspace:
+  #         root: ~/
+  #         paths:
+  #           - project/.circleci/ansible/inventory.txt
+  #     - destroy-environment:
+  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   configure-server:
     docker:
@@ -362,10 +362,10 @@ workflows:
       #      requires: [build-backend]
       #  - scan-frontend:
       #      requires: [build-frontend]
-       - deploy-infrastructure
+      #  - deploy-infrastructure
           #  requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-       - configure-server:
-           requires: [deploy-infrastructure]
+       - configure-server
+          #  requires: [deploy-infrastructure]
        - run-migrations:
            requires: [configure-server]
        - deploy-frontend:
