--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,7 +155,7 @@ jobs:
               aws cloudformation deploy \
                 --template-file .circleci/files/backend.yml \
                 --tags Project=udapeople \
-                --stack-name stack-create-server-${CIRCLE_WORKFLOW_ID:0:7} \
+                --stack-name udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
                 --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
       - run:
           name: Ensure frontend infrastructure exists 
@@ -315,7 +315,7 @@ jobs:
   smoke-test:
 
     docker:
-      - image: python:3.7-alpine3.11
+      - image: python:3.7-alpine3.16
     steps:
       - checkout
       - run:
