--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,124 +1,28 @@
 ---
-- name: "Update packages"
-  become: true
-  apt:
-    update_cache: yes
+  - name: "show remote environment"
+    shell: env
 
-- name: "upgrade packages"
-  become: true
-  apt:
-    upgrade: yes
+  - name: "copy backend binaries"
+    become: yes
+    synchronize:
+      src: ../../backend/dist
+      dest: /home/ubuntu/uda_app
+      recursive: true
 
-- name: remove unused dependencies
-  become: true
-  apt:
-    autoremove: yes
+  - name: "copy node_modules"
+    become: yes
+    synchronize:
+      src: ../../backend/node_modules
+      dest: /home/ubuntu/uda_app
+      recursive: true
 
-- name: "install dependencies."
-  become: true
-  apt:
-    name: ["nodejs", "npm"]
-    state: latest
-    update_cache: yes
+  - name: "delete anything that might already be running"
+    become: true
+    command: pm2 delete all
+    ignore_errors: true
 
-- name: "install pm2 package"
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present
-
-- name: "Creates directory"
-  file:
-    path: ~/web
-    state: directory
-
-- name: Extract backend files
-  become: true
-  unarchive:
-    src: files/artifact.tar.gz
-    dest: .
-
-- name: Executing node app
-  become: true
-  shell: |
-    pm2 stop all
-    pm2 start npm -- start
-
-
-
-# ---
-#   - name: "show remote environment"
-#     shell: env
-#   - name: "copy backend binaries"
-#     become: yes
-#     synchronize:
-#       src: ../../backend/dist
-#       dest: /home/ubuntu/uda_app
-#       recursive: true
-#   - name: "copy node_modules"
-#     become: yes
-#     synchronize:
-#       src: ../../backend/node_modules
-#       dest: /home/ubuntu/uda_app
-#       recursive: true
-#   - name: "update apt packages."
-#     become: yes
-#     apt:
-#       update_cache: yes
-#   - name: "upgrade packages"
-#     become: yes
-#     apt:
-#       upgrade: yes
-#   - name: "install nodejs and npm"
-#     become: yes
-#     apt:
-#       name: ["nodejs", "npm"]
-#       state: latest
-#       update_cache: yes
-#   - name: "install n"
-#     become: yes
-#     npm:
-#       name: n
-#       global: yes
-#       production: yes
-#   - name: "install nodejs 13.8.0"
-#     become: yes
-#     shell: n 13.8.0
-#   - name: "install pm2"
-#     become: yes
-#     npm:
-#       name: pm2
-#       global: yes
-#       production: yes
-#       state: present
-#   - name: "delete anything that might already be running"
-#   - name: Unpacking zipped files
-#       unarchive:
-#       src: "artifact.tar.gz"
-#       dest: /home/ubuntu
-#   - name: Executing node
-#       shell: |
-#         npm install
-#         pm2 stop default
-#         pm2 start npm -- start
-#     become: true
-#     command: pm2 delete all
-#     ignore_errors: true
-#   - name: "start server"
-#     become: true
-#     command: pm2 start -f ./main.js
-#     args:
-#       chdir: /home/ubuntu/uda_app/dist
-    # environment:
-    #  ENVIRONMENT: production
-    #  TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-    #  TYPEORM_MIGRATIONS_DIR: "./migrations"
-    #  TYPEORM_MIGRATIONS: "./migrations/*.js"
-    #  TYPEORM_ENTITIES: "./modules/domain/*/.entity.js"
-    #  TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-    #  TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-    #  TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    #  TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    #  TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+  - name: "start server"
+    become: true
+    command: pm2 start -f ./main.js
+    args:
+      chdir: /home/ubuntu/uda_app/dist
