--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -289,25 +289,25 @@ jobs:
       - run: 
           name: Install dependenciess.
           command: |
-                apk add --update --no-cache tar gzip rsync nodejs npm  ansible curl openssh
+                apk add --update ansible curl rsync openssh nodejs npm
                 pip install awscli
+                ansible --version
+                
       - attach_workspace:
           at: ~/
       - run: 
           name: Deploy backend
+          working_directory: ./.circleci/ansible
           command: |
-                cd backend
-                npm install
-                npm run build
-                cd ..
-                tar -C backend -czvf artifact.tar.gz .
-                mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-                cp artifact.tar.gz  .circleci/ansible/roles/deploy/files/
-                ls .circleci/ansible/roles/deploy/files/
-                cd .circleci/ansible
-                
-                echo "Contents  of the inventory.txt file is ------$(cat inventory.txt)"
-                ansible-playbook -i inventory.txt deploy-backend.yml
+              cd backend
+              npm i
+              npm run build
+              cd ..
+              tar -C backend -czvf artifact.tar.gz .
+              cd .circleci/ansible
+              echo "Contents  of the inventory.txt file is -------"
+              cat inventory.txt
+              ansible-playbook -i inventory.txt deploy-backend.yml
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
