--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -293,18 +293,37 @@ jobs:
                 pip install awscli
       - attach_workspace:
           at: ~/
-      - run: 
+      - run:
           name: Deploy backend
           command: |
-                cd ~/project/backend
-                npm install
+                cd backend
+                npm i
                 npm run build
                 cd ..
                 tar -C backend -czvf artifact.tar.gz .
+                mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
+                cp artifact.tar.gz .circleci/ansible/roles/deploy/files
+            
+                export TYPEORM_MIGRATIONS_DIR=./migrations
+                export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
+                export TYPEORM_MIGRATIONS=./migrations/*.ts
                 cd .circleci/ansible
                 echo "Contents  of the inventory.txt file is -------"
                 cat inventory.txt
-                ansible-playbook -i inventory.txt deploy-backend.yml
+                export ANSIBLE_HOST_KEY_CHECKING=False
+                ansible-playbook -i inventory.txt deploy-backend.yml -v
+      # - run: 
+      #     name: Deploy backend
+      #     command: |
+      #           cd ~/project/backend
+      #           npm install
+      #           npm run build
+      #           cd ..
+      #           tar -C backend -czvf artifact.tar.gz .
+      #           cd .circleci/ansible
+      #           echo "Contents  of the inventory.txt file is -------"
+      #           cat inventory.txt
+      #           ansible-playbook -i inventory.txt deploy-backend.yml
               
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
