--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -328,48 +328,43 @@ jobs:
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
-
   smoke-test:
-
     docker:
-      - image: python:3.7-alpine3.16
+      - image: python:3.10.5-alpine3.16
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            apk add --update ansible
-            pip install awscli
-            apk add --update --no-cache tar gzip nodejs npm curl
-      - attach_workspace:
-          at: ~/
+            apk add --no-cache curl 
+            pip install --upgrade pip && pip install --upgrade awscli
+            pip install nodejs
+            pip install npm
       - run:
-          name: Backend smoke test.
+          name: Get backend url
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7} \
-            --output text)
-             export API_URL="http://${BACKEND_IP}:3030"
-             echo $API_URL
-             if curl "${API_URL}/api/status" | grep "ok"
-             then
-                 return 0
-             else
-                 return 1
-             fi
+            export BACKEND_IP=$(aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --output text)
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}/api/status"
+            if curl -s ${API_URL}/api/status | grep "ok"
+            then
+              return 0
+            else
+              return 1
+            fi
       - run:
-           name: Frontend smoke test.
-           command: |
-             export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
-             echo ${URL}
-             if curl -s ${URL} | grep "Welcomee"
-             then
-               return 0
-             else
-               return 1
-             fi
-    
+          name: Frontend smoke test.
+          command: |
+            export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+              return 0
+            else
+              return 1
+            fi
 
 
 workflows:
