--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,28 +1,33 @@
 ---
-  - name: "show remote environment"
-    shell: env
+- name: "Creates backend directory"
+  file:
+    path: ~/backend
+    state: directory
 
-  - name: "copy backend binaries"
-    become: yes
-    synchronize:
-      src: ../../backend/dist
-      dest: /home/ubuntu/uda_app
-      recursive: true
+- name: "Unarchive backend files"
+  unarchive:
+    src: ~/artifact.tar.gz
+    dest: ~/backend
 
-  - name: "copy node_modules"
-    become: yes
-    synchronize:
-      src: ../../backend/node_modules
-      dest: /home/ubuntu/uda_app
-      recursive: true
+- name: "Installing Node Dependencies"
+  shell: |
+    cd ~/backend
+    tar -xvzf artifact.tar.gz
+    npm install -f
+    
+- name: "Configure pm2 to start as service"
+  shell: |
+    cd ~/backend
+    pm2 start npm -- start -f
+    pm2 list
+    
+  register: execute_node
 
-  - name: "delete anything that might already be running"
-    become: true
-    command: pm2 delete all
-    ignore_errors: true
+- name: print message
+  debug:
+    msg: "{{ execute_node.stdout_lines }}"
 
-  - name: "start server"
-    become: true
-    command: pm2 start -f ./main.js
-    args:
-      chdir: /home/ubuntu/uda_app/dist
+- name: "Configure pm2 to start as service"
+  shell: |
+    sudo su -c "env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu"
+    pm2 save
