--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,9 +200,25 @@ jobs:
       - run:
           name: Configure server
           command: |
+            echo NODE_ENV=production > ~/project/backend/.env
+            echo VERSION: "1" >> ~/project/backend/.env
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ~/project/backend/.env
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ~/project/backend/.env
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ~/project/backend/.env
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ~/project/backend/.env
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR  >> ~/project/backend/.env
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ~/project/backend/.env
+            echo TYPEORM_PORT=$TYPEORM_PORT >> ~/project/backend/.env
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ~/project/backend/.env
+            echo TYPEORM_HOST=$TYPEORM_HOST >> ~/project/backend/.env
+            cat ~/project/backend/.env
             cd .circleci/ansible
-            cat inventory.txt
             ansible-playbook -i inventory.txt configure-server.yml
+          no_output_timeout: 40m
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - project/backend/.env
       - destroy-environment:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
@@ -293,25 +309,34 @@ jobs:
                 pip install awscli
       - attach_workspace:
           at: ~/
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Install dependencies
+          command: |
+            cd backend
+            npm install
+            npm run build
+            cd ..
+      - run:
+          name: Package Backend
+          command: |
+            tar -C backend -czvf artifact.tar.gz .
+            cp artifact.tar.gz  ~/
+      - run:
+          name: Checking the existence of inventory.txt && artifact.tar.gz file
+          command: |
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            echo "Contents of files folder is -------"
+            ls ~/
       - run:
           name: Deploy backend
           command: |
-                cd backend
-                npm i
-                npm run build
-                cd ..
-                tar -C backend -czvf artifact.tar.gz .
-                mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-                cp artifact.tar.gz .circleci/ansible/roles/deploy/files
-            
-                export TYPEORM_MIGRATIONS_DIR=./migrations
-                export TYPEORM_ENTITIES=./modules/domain/**/*.entity{.ts,.js}
-                export TYPEORM_MIGRATIONS=./migrations/*.ts
-                cd .circleci/ansible
-                echo "Contents  of the inventory.txt file is -------"
-                cat inventory.txt
-                export ANSIBLE_HOST_KEY_CHECKING=False
-                ansible-playbook -i inventory.txt deploy-backend.yml -v
+            cd .circleci/ansible
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
       # - run: 
       #     name: Deploy backend
       #     command: |
