--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,37 @@ orbs:
   aws-cli: circleci/aws-cli@3.1.1
   
 commands:
+  install_ansible:
+    description: Install Ansible
+    steps:
+      - run:
+          name: Install Ansible
+          command: |
+            sudo apt update
+            sudo apt install software-properties-common -y
+            sudo add-apt-repository --yes --update ppa:ansible/ansible
+            sudo apt install ansible -y
+  install_nodejs:
+    description: Install Node.js 13
+    steps:
+      - run:
+          name: Install Node.js 13
+          command: |
+            # Install Node.js LTS version as our base Node.js version
+            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
+            sudo apt install -y nodejs
+            # Use n version manager to use Node.js v13.8.0
+            sudo npm install --global n
+            sudo n 13.8.0
+  install_awscli:
+    description: Install AWS CLI v2
+    steps:
+      - run:
+          name: Install AWS CLI v2
+          command: |
+            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip awscliv2.zip
+            sudo ./aws/install
   destroy-environment:
     description: Destroy back-end and front-end cloudformation stacks given a workflow ID.
     parameters:
@@ -192,9 +223,10 @@ jobs:
       
       - run:
           name: Install dependencies
-          working_directory: ./.circleci/ansible
           command: |
-            apk add --update --no-cache tar gzip ansible aws-cli
+            apk add --update ansible
+            apk add --update tar
+            apk add --update gzip
       - attach_workspace:
           at: ~/
       - run:
@@ -264,6 +296,7 @@ jobs:
       - image: python:3.7-alpine3.16
     steps:
       - checkout
+      - install_awscli
       - restore_cache:
           keys: [frontend-build]
       - run: 
@@ -300,13 +333,11 @@ jobs:
       - image: python:3.7-alpine3.16
     steps: 
       - checkout
+      - install_awscli
+      - install_ansible
+      - install_nodejs
       - add_ssh_keys:
           fingerprints: ["ff:36:ea:ad:ae:f0:27:84:c1:45:fb:f6:bb:6d:3e:e9"]  
-      - run: 
-          name: Install dependenciess.
-          command: |
-                apk add --update --no-cache tar gzip rsync nodejs npm  ansible curl openssh
-                pip install awscli
       - attach_workspace:
           at: ~/
       - restore_cache:
@@ -337,18 +368,7 @@ jobs:
             cd .circleci/ansible
             cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
-      # - run: 
-      #     name: Deploy backend
-      #     command: |
-      #           cd ~/project/backend
-      #           npm install
-      #           npm run build
-      #           cd ..
-      #           tar -C backend -czvf artifact.tar.gz .
-      #           cd .circleci/ansible
-      #           echo "Contents  of the inventory.txt file is -------"
-      #           cat inventory.txt
-      #           ansible-playbook -i inventory.txt deploy-backend.yml
+
               
       - revert_migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
